# ComfyUI_Finetuners_Suite

./: LICENSE  README.md  __init__.py  modellocation.txt  nodes.py  pyproject.toml
.github/workflows/: publish.yml
web/js/: fast_group_link.js  index.js  variables_logic.js
workflow/: Variable Logic .json  modelist.csv
